syntax = "proto3";

package product;

option go_package = "./";

service ProductService {
  rpc GetProducts(GetProductsParams) returns (GetProductsResult);
}

message GetProductsParams {
  string limit = 1;
  string offset = 2;
}

message GetProductsResult {
	string message = 1;
	repeated GetProductsDto data = 2;
}

message GetProductsDto {
    int32	id = 1;
    string product_name = 2;
    float price = 3;
    bool active_sale = 4;
    int32 stock = 5;
    string created_at = 6;
    string updated_at = 7;
}

